# timed-decorator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
tests/: functions.py  test_pytorch.py  test_simple.py  test_usage.py
timed/: nested_timed.py  simple_timed.py  utils.py
timed_decorator/: builder.py  nested_timed.py  simple_timed.py  utils.py
